--- a/style.css
+++ b/style.css
@@ -11,39 +11,65 @@ body {
     text-align: center;
 }
 
-header, nav, section, aside, footer {
+header, nav, footer {
     background-color: #ebebeb;
     padding: 50px;
-    margin: 10px 0;
-    
-
+    margin: 10px 0 1px 0;
 }
 
 article {
     color: #ebebeb;
     background-color: #777;
-    
+    clear: both;
+    padding: 25px 15px 5px 15px;
+    margin-top: 25px;
     }
 
 h1, p {
     color: #777;
     background-color: #ebebeb;
+    padding: 20px;
+    margin: 10px 0;
+}
 
+h1 {
+    margin-top: 25px;
+    font-weight: bold;
 }
 
 section {
-    width: 495px;
+    background-color: #ebebeb;
     float: left;
+    width: 495px;
+    padding: 30px 10px 10px 10px;
+    
+
+}
+
+.middle {
+    height: 200px;
+    position: relative;
+    height: 290px;
+    margin: 20px 0 20px 0;
     overflow: hidden;
-   
+    
 }
 
 aside {
     width: auto;
     float: right;
-    width: 450px;
-    overflow: auto;
+    width: 445px;  
+    position: relative;
+    height: 500px;
+    background-color: #ebebeb;
     
+    
+}
+
+#text {
+    padding: 30px;
+    margin: 0px;
+    top: 0px;
 }
 
 header, nav, footer {
@@ -51,11 +77,6 @@ header, nav, footer {
 }
 
 footer {
+    
     clear: both;
-}
-
-.text {
-    color: #777;
-    background-color: #ebebeb;
-  
 }
